Fixed calculator border involuntary expansion on smaller devices

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ h1 {
     background-color: #434544;
     border: 3px solid black;
     border-radius: 15px;
+    max-height: 710px;
 }
 
 .calculator-text {
